--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "CodeMarker",
-  "name": "Good app for learing",
+  "name": "Good app for learning",
   "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#000000",
@@ -11,5 +11,5 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/?utm_source=homescreen"
+  "start_url": "."
 }
