--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "CodeMarker",
+  "short_name": "LearnWise",
   "name": "Good app for learning",
   "background_color": "#ffffff",
   "display": "standalone",
